--- a/css/style.css
+++ b/css/style.css
@@ -326,6 +326,7 @@
       transition: 0.3s ease;
   }
 .dropdown{
+  width: 200px;
     display: none;
     padding: 0;
     margin: 0;
@@ -360,7 +361,34 @@
   .menu-item:not(:last-child){
      margin-right: 43px;
   }
-
+  .more-item{
+    display: none;
+    position: relative;
+    padding: 10px 20px;
+    background-color: var(--accent-color);
+    color: #fff;
+    border-radius: 20px;
+  }
+ .more-list{
+   display: none;
+   position: absolute;
+   padding: 20px;
+   top: 100%;
+   left: -150%;
+   width: 200px;
+   border-radius: 10px;
+   background-color: var(--color-base-1);
+ }
+ .more-list .menu-item{
+   display: none;
+ }
+ .more-dropdown{
+   left: -200px;
+ }
+ .more-item:hover .more-list{
+   display: block;
+ }
+/* BURGER */
   .burger {
     background: transparent;
     border: 0;
@@ -413,33 +441,100 @@
   .hidden {
     display: none;
   }
-  .more-item{
-    display: none;
-    position: relative;
-    padding: 10px 20px;
-    background-color: var(--accent-color);
-    color: #fff;
-    border-radius: 20px;
+
+
+
+
+   /* SITE-MAIN */
+   .site-main{
+     flex-grow: 1;
+     background-color: rgb(58, 58, 50);
+   }
+
+
+
+  /* SITE-FOOTER */
+  .site-footer{
+    padding: 64px 0;
   }
- .more-list{
-   display: none;
-   position: absolute;
-   padding: 20px;
-   top: 100%;
-   left: 0;
-   width: 200px;
-   border-radius: 10px;
-   background-color: var(--color-base-1);
- }
- .more-list .menu-item{
-   display: none;
- }
- .more-dropdown{
-   left: 100px
- }
- .more-item:hover .more-list{
-   display: block;
- }
+   .site-footer__list,
+   .footer-list{
+     padding: 0;
+     margin: 0;
+     list-style-type: none;
+   }
+   .site-footer__list{
+     display: flex;
+     align-items: flex-start;
+     justify-content: space-between;
+     flex-wrap: wrap;
+     margin-bottom: 48px;
+   }
+   .site-footer__item{
+     margin-right: 40px;
+   }
+   .footer-list__title{
+    white-space: nowrap;
+      font-weight: 600;
+      font-size: 18px;
+      line-height: 27px;
+      margin-top: 0;
+      margin-bottom: 16px;
+      font-family: var(--poppins-font-stack);
+      color: var(--heading-color);
+   }
+   .footer-item{
+     white-space: nowrap;
+      font-size: 14px;
+      line-height: 19px;
+      font-family: var(--opensans-font-stack);
+   }
+   .footer-item:not(:last-child){
+     margin-bottom: 16px;
+   }
+   .footer-link{
+     color: var(--accent-color);
+   }
+   .footer-tags__list{
+     padding: 0;
+     margin: 0;
+     list-style-type: none;
+     display: flex;
+     align-items: center;
+     flex-wrap: wrap;
+   }
+   .footer-tags__title{
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 27px;
+    font-family: var(--poppins-font-stack);
+    color: var(--heading-color);
+    margin-top: 0;
+    margin-bottom: 20px;
+   }
+   .tags-item{
+     padding: 4px 10px;
+     background-color: #f5f5f5;
+     font-family: var(--poppins-font-stack);
+     font-weight: 600;
+     font-size: 12px;
+     line-height: 18px;
+     margin-right: 16px;
+     margin-bottom: 16px;
+     border-radius: 12px;
+   }
+   .tags-link{
+     color: var(--heading-color);
+   }
+
+
+
+
+
+
+
+
+
 
   /* RESPONSIVE */
 
@@ -631,6 +726,7 @@
           top: -50px;
           right: 0;
       }
+     
       
   }
   @media only screen and (max-width:612px) {
