--- a/css/style.css
+++ b/css/style.css
@@ -470,9 +470,7 @@
      flex-wrap: wrap;
      margin-bottom: 48px;
    }
-   .site-footer__item{
-     margin-right: 40px;
-   }
+   
    .footer-list__title{
     white-space: nowrap;
       font-weight: 600;
@@ -488,6 +486,11 @@
       font-size: 14px;
       line-height: 19px;
       font-family: var(--opensans-font-stack);
+   }
+   .item-box{
+     display: flex;
+     align-items: flex-start;
+     justify-content: space-between;
    }
    .footer-item:not(:last-child){
      margin-bottom: 16px;
@@ -526,9 +529,8 @@
    .tags-link{
      color: var(--heading-color);
    }
-
-
-
+  
+  
 
 
 
@@ -607,6 +609,13 @@
       display: block;
     }
   }
+  @media only screen and (max-width:760px){
+    .site-footer__item{
+      margin-bottom: 20px;
+      margin-right: 30px;
+    }
+    
+  }
   @media only screen and (max-width:716px) {
     .more-item{
       display: block;
@@ -616,6 +625,13 @@
     }
     .more-list .menu-item:nth-child(4){
       display: block;
+    }
+    .site-footer__list{
+      flex-direction: column;
+      margin-left: 200px;
+    }
+    .site-footer__item{
+      margin-right: 0;
     }
   }
   
@@ -740,10 +756,19 @@
       display: block;
     }
   }
+  @media only screen and (max-width:521px){
+    .site-footer__list{
+      margin-left: 100px;
+      
+    }
+    .site-footer__item{
+      text-align: center;
+    }
+  }
+  
   @media only screen and (max-width:451px) {
     .menu-list{
-      margin-left: auto;
-      margin-right: auto;
+      margin-left: 100px;
     }
     .more-item{
       display: block;
