--- a/css/style.css
+++ b/css/style.css
@@ -448,8 +448,178 @@
    /* SITE-MAIN */
    .site-main{
      flex-grow: 1;
-     background-color: rgb(58, 58, 50);
    }
+   .site-main__container{
+     display: flex;
+     align-items: center;
+     padding: 64px 0;
+   }
+   .accent-cards__wrapper{
+     display: flex;
+     align-items: center;
+   }
+   .side-menu__list{
+     padding: 0;
+     margin: 0;
+     list-style-type: none;
+     margin-right: 122px;
+   }
+   .side-menu__title{
+     font-weight: 600;
+     font-size: 18px;
+     line-height: 27px;
+     color: var(--heading-color);
+     margin-top: 0;
+     margin-bottom: 16px;
+     font-family: var(--poppins-font-stack);
+     white-space:  nowrap;
+   }
+   .side-menu__item{
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 19px;
+    margin-bottom: 12px;
+   }
+   .side-menu__link{
+     text-decoration: underline;
+     color: var(--accent-color);
+   }
+   .btn{
+     padding: 12px 16px;
+     font-size: 15px;
+     line-height: 22px;
+     border-radius: 12px;
+     display: inline-block;
+    }
+    .side-menu__btn{
+      background-color: #f5f5f5;
+      color: var(--heading-color);
+      font-weight: bold;
+     margin-top: 36px;
+     display: flex;
+     align-items: center;
+   }
+   .btn::after{
+     content: "";
+     width: 5px;
+     height: 10px;
+     background-repeat: no-repeat;
+     background-size: contain;
+    }
+    .side-menu__btn::after{
+     margin-left: 12px;
+     margin-top: 6px;
+     background-image: url("../img/arrow-black.png");
+   }
+   .accent-card{
+     width: 420px;
+     padding: 48px 33px;
+     background-color: #F4F8EC;
+     font-family: var(--poppins-font-stack);
+     background-image: url("../img/vegs-banner.png");
+     border-radius: 12px;
+   }
+   .accent-card:not(:last-child){
+     margin-right: 31px;
+   }
+   .accent-card__text{
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 18px;
+     margin: 0;
+     margin-bottom: 8px;
+     color: var(--accent-color);
+   }
+   .accent-card__title{
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 33px;
+    color: var(--heading-color);
+    margin-top: 0;
+    margin-bottom: 94px;
+   }
+   .accent-card__btn{
+     width: 163px;
+    border: 2px solid #92C064;
+    box-sizing: border-box;
+    border-radius: 12px;
+    color: var(--heading-color);
+    display: flex;
+    align-items: center;
+   }
+   .accent-card__btn::after{
+     margin-left: 12px;
+     margin-top: 3px;
+       background-image: url("../img/arrow-black.png");
+   }
+  .cards-wrapper{
+    display: flex;
+    align-items: center;
+  }
+   .card{
+     padding: 16px;
+     background-color: #fff;
+    border: 1px solid #D1D1D1;
+    box-sizing: border-box;
+    border-radius: 12px;
+    font-family: var(--poppins-font-stack);
+   }
+   .card:not(:last-child){
+     margin-right: 32px;
+   }
+   .card::before{
+     content: "";
+     width: 237px;
+     height: 180px;
+     border-radius: 12px;
+     display: block;
+     background-color:#f9f9f9;
+   }
+   .card-title{
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 22px;
+    color: var(--heading-color);
+    margin-top: 16px;
+    margin-bottom: 4px;
+   }
+   .card-text{
+    font-size: 12px;
+    line-height: 16px;
+    font-family: var(--opensans-font-stack);
+    color: #575757;
+    margin-top: 0;
+    margin-bottom: 16px;
+   }
+   .card-box{
+     display: flex;
+     align-items: center;
+     justify-content: space-between;
+   }
+   .card-btn{
+     padding: 6px 12px;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 22px;
+    background-color: var(--accent-color);
+    border: 2px solid #46760A;
+    color: #fff;
+   }
+   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
