--- a/css/style.css
+++ b/css/style.css
@@ -452,7 +452,8 @@
    .site-main__container{
      display: flex;
      align-items: center;
-     padding: 64px 0;
+     padding-top: 64px;
+     padding-bottom: 64px;
    }
    .accent-cards__wrapper{
      display: flex;
@@ -462,7 +463,7 @@
      padding: 0;
      margin: 0;
      list-style-type: none;
-     margin-right: 122px;
+     margin-right:auto;
    }
    .side-menu__title{
      font-weight: 600;
@@ -738,6 +739,15 @@
     .more-list .menu-item:nth-child(7){
       display: block;
     }
+    .site-main__container{
+      flex-direction: column;
+      justify-content: center;
+    }
+    .side-menu__list{
+      margin-right: 0;
+      text-align: center;
+      margin-bottom: 40px;
+    }
   }
   @media only screen and (max-width:1012px) {
     .more-item{
@@ -749,6 +759,22 @@
     .more-list .menu-item:nth-child(6){
       display: block;
     }
+  }
+  @media only screen and (max-width:890px){
+     .accent-cards__wrapper{
+       flex-direction: column;
+     }
+     .accent-card:not(:last-child){
+       margin-right: 0;
+       margin-bottom: 40px;
+     }
+     .cards-wrapper{
+       flex-direction: column;
+     }
+     .card:not(:last-child){
+       margin-right: 0;
+       margin-bottom: 30px;
+     }
   }
   @media only screen and (max-width:860px){
     .header-main{
@@ -783,6 +809,7 @@
     .site-footer__item{
       margin-bottom: 20px;
       margin-right: 30px;
+      text-align: center;
     }
     
   }
@@ -798,7 +825,7 @@
     }
     .site-footer__list{
       flex-direction: column;
-      margin-left: 200px;
+      align-items: center;
     }
     .site-footer__item{
       margin-right: 0;
@@ -859,7 +886,6 @@
         .sitenav-list{
             flex-direction: column;
             margin-bottom: 100px;
-            text-align: left;
         }
         .contact-us__link:not(:first-child){
             color: white;
@@ -927,13 +953,8 @@
     }
   }
   @media only screen and (max-width:521px){
-    .site-footer__list{
-      margin-left: 100px;
-      
-    }
-    .site-footer__item{
-      text-align: center;
-    }
+    
+    
   }
   
   @media only screen and (max-width:451px) {
@@ -948,5 +969,8 @@
     }
     .more-list .menu-item:nth-child(2){
       display: block;
+    }
+    .accent-card{
+      width: 320px;
     }
   }
