add category html

--- a/css/style.css
+++ b/css/style.css
@@ -537,7 +537,6 @@
      padding: 16px;
      background-color: #fff;
     border: 1px solid #D1D1D1;
-    box-sizing: border-box;
     border-radius: 12px;
     font-family: var(--poppins-font-stack);
    }
@@ -791,11 +790,490 @@
     margin-top: 0;
     margin-bottom: 16px;
   }
+  .good-start__link{
+    color: var(--heading-color);
+  }
 
 
 
 
+  /* CATEGORY--PAGE--STYLES */
 
+  .page-links__wrapper{
+    display: flex;
+    align-items: center;
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+  .home-page__link{
+    font-family: var(--opensans-font-stack);
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 16px;
+    color: #A9A9A9;
+    margin-right: 8px;
+    display: flex;
+    align-items: flex-start;
+  }
+  .home-page__link::after{
+    content: "/";
+    width: 10px;
+    height: 10px;
+    margin-left: 8px;
+  }
+  .category-page__link{
+    font-family: var(--opensans-font-stack);
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 16px;
+    color: var(--heading-color);
+  }
+  .view-part{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 8px;
+    padding-top: 8px;
+  }
+  .view-part__title{
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 48px;
+    color: var(--heading-color);
+    margin: 0;
+    font-family: var(--poppins-font-stack);
+  }
+  .view-list{
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    font-family: var(--opensans-font-stack);
+  }
+  .view-item{
+    font-size: 12px;
+    line-height: 16px;
+    display: flex;
+    align-items: center;
+  }
+  .view-item:not(:last-child){
+    margin-right: 25px;
+  }
+  .view-item::before{
+    content: "";
+    width: 14px;
+    height: 14px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-right: 5px;
+  }
+  .view-item__grid::before{
+    background-image: url("../img/ic-layout-square-grid.png");
+  }
+  .view-item__list::before{
+    background-image: url("../img/ic-layout-sections.png");
+  }
+  .view-item__products::before{
+    content: "117";
+    background-color: #F4F8EC;
+    width: 30px;
+    text-align: center;
+    border-radius: 12px;
+    color: var(--accent-color);
+  }
+  .view-link{
+    color: #A9A9A9;
+  }
+  .view-link__active{
+    color: var(--heading-color);
+  }
+
+  /* FILTER-FORM */
+  .filter-form{
+    display: flex;
+    font-family: var(--opensans-font-stack);
+    align-items: center;
+    font-size: 14px;
+    line-height: 19px;
+    font-weight: normal;
+    margin-bottom: 16px;
+  }
+  .filter-form__wrapper{
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+ .input-wrapper{
+   background-color: #F9F9F9;
+   border: 1px solid #D1D1D1;
+   border-radius: 12px;
+   padding: 10px 16px;
+  }
+  .radio-wrapper{
+    max-width: 236px;
+    display: flex;
+    align-items: center;
+    margin-right: 16px;
+ }
+ .input-label{
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  white-space: nowrap;
+}
+.input-label:first-child{
+  margin-right: 17px;
+}
+
+.input-label input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  background-color: #fff;
+  border: 1.5px solid #D1D1D1;
+  border-radius: 50%;
+}
+
+
+.input-label:hover input ~ .checkmark {
+  background-color: #fff;
+}
+
+.input-label input:checked ~ .checkmark {
+  background-color: var(--heading-color);
+  border-color: var(--heading-color);
+}
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+.input-label input:checked ~ .checkmark:after {
+  display: block;
+}
+
+.input-label .checkmark:after {
+ 	top: 50%;
+	left: 50%;
+  transform: translate(-50%, -50%);
+	width: 10px;
+	height: 10px;
+	border-radius: 50%;
+	background: white;
+}
+
+
+
+.checkbox__wrapper{
+   max-width: 151px;
+   display: flex;
+   align-items: center;
+   margin-right: 16px;
+}
+.input-checkbox {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  margin-right: 8px;
+}
+
+input[type="checkbox"] {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.checkbox-checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  background-color: #fff;
+  border: 1.5px solid #D1D1D1;
+  border-radius: 3px;
+}
+
+.input-checkbox input:checked ~ .checkbox-checkmark {
+  background-color: var(--accent-color);
+  border-color: #46760A;
+}
+
+.checkbox-checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.input-check:checked ~ .checkbox-checkmark:after {
+  display: block;
+}
+
+.checkbox-checkmark:after {
+  left:5px;
+  top:0;
+  width: 8px;
+  height: 12px;
+  display: block;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.nbm-text{
+  border: 1px solid #D1D1D1;
+  border-radius: 12px;
+  padding: 0 8px;
+}
+
+ .checkbox__wrapper-select{
+   max-width: 235px;
+ }
+ .filter-form__select{
+   background-color: transparent;
+   border: none;
+   margin-left: 12px;
+   font-weight: 600;
+    font-size: 12px;
+    line-height: 18px;
+    font-family: var(--poppins-font-stack);
+    border-left: 1px solid #d1d1d1;
+    padding-left: 12px;
+ }
+
+ .applied-filters{
+   display: flex;
+   align-items: center;
+   font-family:var(--poppins-font-stack);
+   font-weight: 600;
+   font-size: 12px;
+   line-height: 18px;
+ }
+ .applied-filters__text{
+   color: #a9a9a9;
+   margin-right: 12px;
+ }
+ .applied-filters__selected{
+   color: var(--accent-color);
+   background-color: #F4F8EC;
+   padding: 0 8px;
+   border-radius: 12px;
+   display: flex;
+   align-items: center;
+   margin-right: 12px;
+   cursor: pointer;
+ }
+ .applied-filters__selected::after{
+   content: "";
+   width: 7px;
+   height: 7px;
+   background-repeat: no-repeat;
+   background-size: contain;
+   background-image: url("../img/layer.png");
+   margin-left: 7px;
+ }
+
+
+ /* main-content__container */
+
+ .main-content__container{
+   display: flex;
+   align-items: start;
+ }
+ .sidebar{
+   max-width: 268px;
+ }
+ 
+ .product-card__wrapper{
+   width: 869px;
+ }
+ .product-card{
+   padding: 29px;
+   max-width: 100%;
+   display: flex;
+   align-items: start;
+   position: relative;
+ }
+ .product-card::before{
+   content: "";
+   width: 268px;
+   height: 280px;
+   display: block;
+   position: absolute;
+   top: 0;
+   left: 0;
+ }
+ .product-info{
+   margin-left: 300px;
+   margin-right: auto;
+ }
+.product-list{
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+  margin-bottom: 27px;
+}
+.product-card__title{
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 27px;
+  font-family: var(--poppins-font-stack);
+  color: var(--heading-color);
+  margin-top: 0;
+  margin-bottom: 4px;
+}
+.product-card__text{
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 16px;
+  color: #575757;
+  font-family: var(--opensans-font-stack);
+  margin-top: 0;
+}
+
+.product-item{
+  margin-right: 5px;
+}
+.product-info__desc{
+  font-family: var(--opensans-font-stack);
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 19px;
+  color: #A9A9A9;
+  margin: 0;
+}
+.product-info__desc:not(:last-child){
+  margin-bottom: 12px;
+}
+.product-info__desc-ans{
+  color: var(--accent-color);
+  margin-left: 32px;
+}
+.desc-wrapper{
+  display: flex;
+  align-items: center;
+}
+.desc-wrapper div:nth-child(1){
+  margin-right: 32px;
+}
+.product-info__desc-accent{
+  color: var(--accent-color);
+}
+.product-cost{
+  font-family: var(--poppins-font-stack);
+  color: var(--heading-color);
+  font-weight: 600;
+}
+.product-cost__numb{
+  font-size: 18px;
+  line-height: 27px;
+  margin: 0;
+}
+.product-cost__disc{
+  font-size: 12px;
+  line-height: 18px;
+  text-decoration-line: line-through;
+  color: #A9A9A9;
+}
+.product-cost__shipping{
+  font-size: 12px;
+  line-height: 18px;
+  margin: 0;
+  color: #A9A9A9;
+  font-weight: 600;
+}
+.product-cost__delivery{
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 400;
+  color:#A9A9A9 ;
+}
+.product-cost__btn{
+  display: inline-block;
+  border-radius: 12px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 22px;
+  padding: 12px 16px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 12px;
+}
+.product-cost__btn::after{
+  content: "";
+  width: 7px;
+  height: 7px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin-left: 10px;
+  background-image: url("../img/arrow-right-white.png");
+}
+.product-cost__wishlist{
+  padding: 6px 12px;
+  color: var(--heading-color);
+  border-radius: 12px;
+  background-color: #F5F5F5;
+  display: flex;
+  align-items: center;
+}
+.product-cost__wishlist::before{
+  content: "";
+  width: 13px;
+  height: 12px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin-left: 10px;
+  background-image: url("../img/heart.png");
+  margin-right: 10px;
+}
+.product-cost__numg-box{
+  margin-bottom: 12px;
+}
+.product-cost__shipping-box{
+  margin-bottom: 26px;
+}
+
+/* SIDEBAR */
+.sidebar{
+  margin-right: auto;
+}
+.category-list{
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+.category-item{
+  display: flex;
+  align-items: center;
+}
+.category-text{
+  margin-right: auto;
+}
 
 
 
